<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/litres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView1" />

        <EditText
            android:id="@+id/countLitres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal" />

    </LinearLayout>


    <TextView
        android:id="@+id/markPetrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/textView2" />

    <RadioGroup
        android:id="@+id/petrol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/petrol92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton1" />

        <RadioButton
            android:id="@+id/petrol95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton2" />

        <RadioButton
            android:id="@+id/petrol98"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton3" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonOk" />

    </LinearLayout>

</LinearLayout>
